[verify on windows - wip: clean up CMakeLists] enable cross platform builds with cmake

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,8 @@
 
+/vendor/*
+!/vendor/patch
+!/vendor/CMakeLists.txt
+
 # Created by https://www.gitignore.io/api/visualstudio,c++,sublimetext
 
 ### VisualStudio ###
